Personal preference when putting my name on something
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@918 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,6 @@ In order of first commit:
 Jesse Vincent <jesse@bestpractical.com>
 David Glasser <glasser@bestpractical.com>
 Alex Vandiver <alexmv@bestpractical.com>
-Tom Sibley  <trs@bestpractical.com>
+Thomas Sibley <trs@bestpractical.com>
 Kevin Riggle <kevinr@bestpractical.com>
 Audrey Tang <audreyt@audreyt.org>
