AUTHORS - added myself
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@919 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Alex Vandiver <alexmv@bestpractical.com>
 Thomas Sibley <trs@bestpractical.com>
 Kevin Riggle <kevinr@bestpractical.com>
 Audrey Tang <audreyt@audreyt.org>
+Eric Wilhelm <ewilhelm@cpan.org>
