Add note about class name breakage
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@949 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,10 @@
+SVN revision r932
+
+  * Form fields no longer automatically insert the field name by itself
+    as a class.  Instead, the class has changed to "argument-<fieldname>"
+	to avoid conflicts with generic class names (such as date).
+
+
 SVN revision r809
 
   * Move allow and deny'ing of actions into Jifty::API; this breaks
