lib/Jifty/Manual/ObjectModel.pod - typo fixes lib/Jifty/Manual/Tutorial.pod - removed link in literal, added 'Online Help' section
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@971 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -194,7 +194,7 @@ You should see something like this:
   package MyWeblog::Model::Post::Schema;
   use Jifty::DBI::Schema;
 
-  # Your column definitions go here.  See L<Jifty::DBI::Schema> for
+  # Your column definitions go here.  See Jifty::DBI::Schema for
   # documentation about how to write column definitions.
 
   package MyWeblog::Model::Post;
@@ -402,6 +402,19 @@ Please join us on the C<jifty-devel> mailing list to talk about how you're
 using Jifty or what you find difficult or hard to use about it.
 
 =head1 GETTING HELP
+
+=head2 Online Help
+
+The C<jifty> command-line application comes with builtin help.
+
+  jifty help
+
+  jifty help <command>
+
+If your server is running with administration mode enabled (the
+configuration file C<AdminMode> setting is missing or non-zero), you can
+click the "Online Docs" link in your browser for an extensive list of
+per-module Jifty documentation.
 
 =head2 Joining the mailing list
 
