Adding myself to AUTHORS
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@994 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ Thomas Sibley <trs@bestpractical.com>
 Kevin Riggle <kevinr@bestpractical.com>
 Audrey Tang <audreyt@audreyt.org>
 Eric Wilhelm <ewilhelm@cpan.org>
+Nelson Elhage <nelhage@mit.edu>
