* First pass at a plugin archetecture
 * This also include some reworking of the ClassLoader, including
   removing the ActionBaseClass and CurrentUserPath config settings,
   which breaks backwards compatibility!  If you were using these,
   please let us know your use case.

git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1034 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/Changelog
+++ b/Changelog
@@ -1,20 +1,25 @@
+  * Removed the ActionBasePath and CurrentUserClass configuration
+    variables.  This breaks backwards compatibility.
+
 0.60507 (7 May 2006)
 
-* Pod fixes from Eric Wilhelm
-  lib/Jifty/Object.pm - removed incorrect '=for' directive
-  lib/Jifty/Web/Form/Field.pm - removed incorrect '=for' directive
-  lib/Jifty/Web/Form.pm - removed incorrect '=for' directive
-  
+  * Pod fixes from Eric Wilhelm
+    lib/Jifty/Object.pm - removed incorrect '=for' directive
+    lib/Jifty/Web/Form/Field.pm - removed incorrect '=for' directive
+    lib/Jifty/Web/Form.pm - removed incorrect '=for' directive
 
-* Better failure messages on when schema upgrades with SQLite fail from Alex Vandiver
-   * Be a little more explicit about SQLite's limitation, and a possible
-     (painful) workaround
- 
-* Update the inc tree to 0.62 for various fixes,
-   in particular improved share_dir compatibility. --Audrey Tang
+  * Better failure messages on when schema upgrades with SQLite fail
+    from Alex Vandiver
 
-* We were inconsistently using Jifty::Util::make_path as a subroutine. It's a class method.
-  This could break the stub generators and tutorial.  Thanks to Sean E. Millichamp
+  * Be a little more explicit about SQLite's limitation, and a possible
+    (painful) workaround
+
+  * Update the inc tree to 0.62 for various fixes,
+    in particular improved share_dir compatibility. --Audrey Tang
+
+  * We were inconsistently using Jifty::Util::make_path as a
+    subroutine. It's a class method.  This could break the stub
+    generators and tutorial.  Thanks to Sean E. Millichamp
 
 0.60505 - Cinco de Jifty! (5 May 2006)
 
