Add myself to AUTHORS
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1062 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Audrey Tang <audreyt@audreyt.org>
 Eric Wilhelm <ewilhelm@cpan.org>
 Nelson Elhage <nelhage@mit.edu>
 Sean E Millichamp <sean@enertronllc.com>
+Kenichi Ishigaki <ishigaki@tcool.org>
