* Added a changelog note about the record/object changes * Don't cluck on failed _set method calls.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1203 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,10 @@
   * The JS method document.getElementsBySelector() no longer exists.  Use 
     cssQuery() instead.
 
+  * Jifty::Record now returns empty objects for related objects that can't be 
+    loaded, rather than undef
+
+
 * The keybinding JS code is now a more proper library 
     (Jifty.KeyBindings) and less intrusive.  If you've overridden the 
     default /_elements/wrapper in your app, you'll want to make sure you get 
