* add clkao to AUTHORS.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1229 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,3 +9,4 @@ Eric Wilhelm <ewilhelm@cpan.org>
 Nelson Elhage <nelhage@mit.edu>
 Sean E Millichamp <sean@enertronllc.com>
 Kenichi Ishigaki <ishigaki@tcool.org>
+Chia-Liang Kao <clkao@clkao.org>
