minor grammar fixes
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1268 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -173,7 +173,7 @@ classes you generate.)
 
 As you might imagine by the fact that this tutorial application is named
 B<MyWeblog>, the example here is a simple weblog application.  Future
-tutorials, will add authentication, comments, and RSS and Atom feeds.
+tutorials will add authentication, comments, and RSS and Atom feeds.
 
 =head3 Posts
 
