--- a/AUTHORS
+++ b/AUTHORS
@@ -10,3 +10,4 @@ Nelson Elhage <nelhage@mit.edu>
 Sean E Millichamp <sean@enertronllc.com>
 Kenichi Ishigaki <ishigaki@tcool.org>
 Chia-Liang Kao <clkao@clkao.org>
+Dobrica Pavlinusic <dpavlin@rot13.org>
